--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,11 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+dzello:
+  name: Josh Dzielak
+  title: Co-Founder & CTO, Orbit
+  url: https://github.com/dzello
+  image_url: https://github.com/dzello.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+steeve:
+  name: Steeve Bete
+  title: Senior Software Engineer, Orbit
+  url: https://github.com/steeve-orbit
+  image_url: https://github.com/steeve-orbit.png
